sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:14: error: not enough arguments for method getCouleur: (x$1: Int)Int.
Unspecified value parameter x$1.
    if (getCouleur()==ROUGE){
                  ^DutchFlagAlgo:19: error: not enough arguments for method getCouleur: (x$1: Int)Int.
Unspecified value parameter x$1.
    }else if (getCouleur()==BLANC){
                        ^